# portfolio

./: README.md
arduino/: README.md
db-manager/: README.md
db-manager/DB/: __init__.py  firebase_manager.py  inventory.py  item_tracker.py  monitor.py  navigation.py  reset_inventory.py  robot_status.py  (+4 more)
labeling/: README.md
notion/: 00_메인페이지.md  01_ROBO_Katsu.md  02_Isaac_Sim_DB_UI.md  03_라벨링.md  04_Arduino.md
robo-katsu/: README.md
robo-katsu/src/cobot1/: README.md  package.xml  setup.py
robo-katsu/src/cobot1/cobot1/nodes/: __init__.py  motion_executor.py  robot_status_publisher.py  task_cli.py  task_controller.py  ui_bridge.py
robo-katsu/src/cobot1/cobot1/tasks/: __init__.py  _common.py  task_gripper_open.py  task_home.py  task_rice.py  task_sauce.py  task_tong.py
robo-katsu/src/cobot1/config/: firebase_sync.env.example
robo-katsu/src/cobot1/docs/: 2024-04-pause-gripper-bugfixes.md  ARCHITECTURE.md  TODO.md  firebase-integration.md  rclpy-executor-dsr2-troubleshooting.md  recovery-gripper-emergency-subtask.md  robot-state-recovery.md  safe-off-recovery-bug.md
robo-katsu/src/cobot1/launch/: motion.launch.py  task_system.launch.py  ui.launch.py
robo-katsu/src/cobot1/raw/: down.py  force_control.py  grip_test.py  rice_1.py  rice_2.py  sauce.py  source.py  swing.py  tong.py
robo-katsu/src/cobot1/test/: test_gripper_safety.py  test_pause_resume_race.py
robo-katsu/src/cobot1/web_ui/: app.js  index.html  rosClient.js
robo-katsu/src/cobot_interfaces/: CMakeLists.txt  package.xml
robo-katsu/src/cobot_interfaces/action/: ExecuteTask.action
robo-katsu/src/cobot_interfaces/msg/: RobotStatus.msg  TaskState.msg
robo-katsu/src/cobot_interfaces/srv/: StartTask.srv  StopTask.srv
(+4662 files in other folders)
